--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>28/11/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Samuel Bardhi (baby, 6 months)</b><br>Region of origin: <b>Kosovo</b><br>Cause of death: <b>died of pneumonia in suspicious circumstances in Carinthia (AT)</b><br>Source: Rosa Antifa/Format/DerStandard/DieGrünen/DPA<br>
+Found dead: <b>20/12/03</b><br>Number of person: <b>7</b><br>Name, gender, age: <b>N.N. (7 men)</b><br>Region of origin: <b>Jordan, Iraq, Iran, Afghanist</b><br>Cause of death: <b>drowned after boat sank off Marmaris (TR) coast on way to Greece</b><br>Source: MNS/NI/AP/SP/Kurier/Vielfaltletter/BBC/MUGAK<br>
 
 <br>
 
