--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>08/07/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Negmiye Beraj (baby, 10 months)</b><br>Region of origin: <b>Kosovo</b><br>Cause of death: <b>died after being left alone on Italian shore by traffickers fleeing police</b><br>Source: MNS/IRR<br>
+Found dead: <b>17/03/07</b><br>Number of person: <b>11</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>7 washed ashore in Samos (GR) after leaving from Turkey; 4 missing</b><br>Source: FE/KI/DPA<br>
 
 <br>
 
