--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>17/03/07</b><br>Number of person: <b>11</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>7 washed ashore in Samos (GR) after leaving from Turkey; 4 missing</b><br>Source: FE/KI/DPA<br>
+Found dead: <b>Oct 02</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (3 men)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned after boat carrying 42 migrants sank off coast of Barbate (ES)</b><br>Source: IRR<br>
 
 <br>
 
