--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>22/05/08</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>drowned while attempting to reach Spain, bodies found in sea near Cherchell (DZ)</b><br>Source: NOB/FE<br>
+Found dead: <b>12/04/17</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>presumed drowned in the Strait of Gibraltar off coast of Spain; 6 survivors</b><br>Source: APDHA/IOM/Caminando<br>
 
 <br>
 
