--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>29/02/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Egypt</b><br>Cause of death: <b>died of hypothermia, found in warehouse in Corinthia (GR)</b><br>Source: PICUM/Proto<br>
+Found dead: <b>05/06/08</b><br>Number of person: <b>13</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned after stormy weather caused boat to sink 50 km off coast of Libya</b><br>Source: CDS/SP/NOB<br>
 
 <br>
 
