--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>31/10/99</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N</b><br>Region of origin: <b>Kurdistan-Iraq</b><br>Cause of death: <b>blown up in minefield while trying to cross Turkish-Greek border near Kipi (GR)</b><br>Source: AP/taz<br>
+Found dead: <b>08/12/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mustafa Demir (man, 23)</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>stowaway, suffocated in cargo container travelling to Ireland from Belgium</b><br>Source: AFP/VK/SZ/MET/AP/NCADC/MNS/RTE/KO/MN<br>
 
 <br>
 
