--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>30/10/15</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died in shipwreck off Rhodes (GR) in the Mediterranean Sea; 6 rescued</b><br>Source: IOM/NBC<br>
+Found dead: <b>03/03/93</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Turkey</b><br>Cause of death: <b>suicide, at penal institution in Dinslaken (DE)</b><br>Source: WIB/FR-NieSa/ZAG<br>
 
 <br>
 
