--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>08/12/17</b><br>Number of person: <b>8</b><br>Name, gender, age: <b>N.N. (3 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>3 drowned, bodies found off Messida beach in El Kala (DZ); 5 missing, 4 survivors</b><br>Source: QUOTI/IOM<br>
+Found dead: <b>14/07/96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Juri Palienko (man, 49)</b><br>Region of origin: <b>Ukraine</b><br>Cause of death: <b>suicide, in detention centre in Erding (DE)</b><br>Source: AN/jW/ARI/ProAsyl/ZAG<br>
 
 <br>
 
