--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>06/08/13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Commandan (young man)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>stabbed by another Afghan at squat in Calais (FR); reportedly a reprisal attack without fatal intent</b><br>Source: CMS<br>
+Found dead: <b>23/09/10</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Bertha Penetes Acosta (woman, 74)</b><br>Region of origin: <b>Colombia</b><br>Cause of death: <b>died in expulsion centre in Ter Apel (NL) after arrest; had been living without papers in the Netherlands for decades</b><br>Source: TVblik/VK<br>
 
 <br>
 
