--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>13/12/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>died of exhaustion after long trek, found near Greek village at Turkish-Greek border</b><br>Source: NOB<br>
+Found dead: <b>12/07/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 23)</b><br>Region of origin: <b>Gambia</b><br>Cause of death: <b>hit by truck after being expelled from France at Strada Statale 1 near Ventimiglia (IT)</b><br>Source: Stampa/IOM<br>
 
 <br>
 
