--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>12/07/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 23)</b><br>Region of origin: <b>Gambia</b><br>Cause of death: <b>hit by truck after being expelled from France at Strada Statale 1 near Ventimiglia (IT)</b><br>Source: Stampa/IOM<br>
+Found dead: <b>08/03/10</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>E. G. (boy, baby)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died of starvation after family received asylum but no assistance in Westminster, London (GB)</b><br>Source: GuardianUn.<br>
 
 <br>
 
