--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/03/98</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>stowaway, suffocated on his way to Ireland in the hold of Jamaican vessel</b><br>Source: MNS<br>
+Found dead: <b>08/12/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Kalendar Kalendergil (boy, 12)</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>stowaway, suffocated in cargo container travelling to Ireland from Belgium</b><br>Source: AFP/VK/SZ/MET/AP/NCADC/MNS/RTE/KO/MN<br>
 
 <br>
 
