--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>10/11/17</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (1 woman; 1 man)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>shot by Turkish border guards near Iskenderun (TR) while trying to cross Syrian-Turkish border</b><br>Source: SOHR/IOM<br>
+Found dead: <b>23/05/14</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Haroon Youssef (man, 19)</b><br>Region of origin: <b>Sudan</b><br>Cause of death: <b>stowaway, died after falling from tourist bus while trying to get to Great Britain</b><br>Source: CMS<br>
 
 <br>
 
