--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>31/01/09</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>found by Moroccan navy in boat sailing near coast of Al Hoceima (MA)</b><br>Source: Can7/MUGAK<br>
+Found dead: <b>29/01/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mohammad Rahsepar (man, 29)</b><br>Region of origin: <b>Iran</b><br>Cause of death: <b>suicide, hanged himself with sheet in asylum centre in Würzburg (DE)</b><br>Source: FR-BW/INDd/ARD/HRS/SD/MainPost/U4IB/SOS<br>
 
 <br>
 
