--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Mar 95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (baby)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died after doctors refused to offer free help at hospital near Rome (IT)</b><br>Source: CARF/IRR/Searchlight<br>
+Found dead: <b>16/10/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (boy, 17)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>hit by freight train passing through Coquelles near Port of Calais (FR)</b><br>Source: Parisien/Lacote/MNS<br>
 
 <br>
 
