--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>16/08/97</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Ali Polat (man)</b><br>Region of origin: <b>Kurdistan-Turkey</b><br>Cause of death: <b>presumed dead, disappeared after being deported from Germany to Turkey</b><br>Source: ARI<br>
+Found dead: <b>04/06/97</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Bektas Heval (26)</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>died in assumed arson attack at refugee hostel in Friedrichshafen (DE)</b><br>Source: taz/DPA/Querblick/MNS/CARF/ZAG<br>
 
 <br>
 
