--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>20/06/07</b><br>Number of person: <b>22</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>reportedly drowned after vessel capsized 100 km south of Malta</b><br>Source: MNS<br>
+Found dead: <b>Mar 07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>died on boat trying to reach Tenerife (ES) from Mauritania, body thrown overboard</b><br>Source: FE/EP<br>
 
 <br>
 
