--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>27/07/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Erdogan Tahir (man, 37)</b><br>Region of origin: <b>Turkey</b><br>Cause of death: <b>died of dehydration, body found hanging from a train at railway station in Gorizia (IT)</b><br>Source: IET/ILP<br>
+Found dead: <b>24/04/96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Tatjana I. Kabakchieva</b><br>Region of origin: <b>Bulgaria</b><br>Cause of death: <b>drowned in the Oder River trying to cross border from Poland into Germany</b><br>Source: FFM/ND/Uckermark-Kurier/ZAG<br>
 
 <br>
 
