--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>11/06/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>India</b><br>Cause of death: <b>drowned while trying to cross Morava River (SK/CZ) from Slovakia to Czech Republic</b><br>Source: AP/IRR/Der Standard<br>
+Found dead: <b>15/01/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, ±25)</b><br>Region of origin: <b>Gambia, Senegal</b><br>Cause of death: <b>stowaway, froze in undercarriage of airplane travelling from Gambia to Brussels (BE)</b><br>Source: AngolaPress/MNS/PICUM/Vivre<br>
 
 <br>
 
