--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>18/10/07</b><br>Number of person: <b>10</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Mali</b><br>Cause of death: <b>jumped into the sea in desperation, lost at sea after vessel went adrift on way from Mauritania to Spain</b><br>Source: MNS/PICUM/Le Courrier<br>
+Found dead: <b>08/10/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned, body found near coast of Níjar (ES)</b><br>Source: ELM<br>
 
 <br>
 
