--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>06/03/16</b><br>Number of person: <b>25</b><br>Name, gender, age: <b>N.N. (10 children)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died when boat bound for Greece capsized off coast of Turkey with 10 children aboard</b><br>Source: HurriyetDN/AA/AP/Independent<br>
+Found dead: <b>25/12/09</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Carlos (woman, 34)</b><br>Region of origin: <b>Brazil</b><br>Cause of death: <b>suicide, transsexual hanged herself with a sheet in detention centre in Milan (IT)</b><br>Source: EveryOne Group/LR/Migreurop<br>
 
 <br>
 
